20 September 2004:  Menelaos Karavelas
- added missing sites2.cin data file in examples/data directory
- added missing svd-join_split.* files needed for documentation of the
  segment Voronoi diagram data structure concept

9 September 2004:  Menelaos Karavelas
- added third example (in examples/subdir and in doc) that shows how
  to recover the data for the Voronoi edges.

7 September 2004:  Menelaos Karavelas
- Documentation & code: replaced Agds_2 by Tds_2

3 September 2004:  Menelaos Karavelas
- test_svd_2_et.C: in definition of sqrt for Gmpq, I qualified the calls to
  to_double and sqrt by CGAL::
- polygon Voronoi diagram demo: fixed bugs in class
  Segment_Voronoi_diagram_vertex_base_with_info_2
- pvd_typedefs.h: replaced SVD_data_structure_2 by AG_data_structure_2
- Square_root_{1,2}: fixes for g++-3.4 (essentially kept the code under
  CGAL_USE_ADL_FOR_NT and removed the alternative code)
- documentation: added chapter author

30 August 2004:  Menelaos Karavelas
- SVD_kernel_wrapper_2 : removed unused variable (it was creating warnings
  on some compilers)
- test_types.h : commented usused variable

28 August 2004:  Menelaos Karavelas
- moved split_vertex from Segment_Voronoi_diagram_data_structure_2 to TDS2
- replaced Segment_Voronoi_diagram_data_structure_2 (which is now obsolete)
  by Apollonius_graph_data_structure_2 (until a better name is found...)
- documentation: replaced references to the segment Voronoi diagram concept
  and model by the ones in the Apollonius graph package

27 August 2004:  Menelaos Karavelas
- fixed bug in hierarchy about calling the wrong version of insert_third

20 August 2004:  Menelaos Karavelas
- fixed bugs in copy constructor/assignment operator for the segment
  Voronoi diagram and segment Voronoi diagram hierarchy classes
- using std::list instead of std::set for the input sites container
- using replaced Triple by boost tuple in Site_rep_2

18 August 2004:  Menelaos Karavelas
- updated TODO list