@@ -28,6 +28,9 @@
 #include <CGAL/Number_type_traits.h>
 #include <CGAL/Segment_Voronoi_diagram_traits_base_2.h>
 
+#include <CGAL/Filtered_kernel.h>
+#include <CGAL/Segment_Voronoi_diagram_filtered_traits_2.h>
+
 
 CGAL_BEGIN_NAMESPACE
 
@@ -66,6 +69,17 @@ struct Segment_Voronoi_diagram_traits_2<R,Euclidean_ring_tag>
   }
 };
 
+// Specialization for filtered_kernel
+template<class R>
+struct Segment_Voronoi_diagram_traits_2<Filtered_kernel<R>,Field_tag>
+  : public
+  Segment_Voronoi_diagram_filtered_traits_2<R,Field_tag,
+					    typename Filtered_kernel<R>::EK,
+					    Field_tag,
+					    typename Filtered_kernel<R>::FK,
+					    Sqrt_field_tag>
+{};
+
 //=========================================================================
 
 // this traits class does NOT support intersecting segments
@@ -93,6 +107,20 @@ Segment_Voronoi_diagram_traits_without_intersections_2<R,Euclidean_ring_tag>
     ( R() );
   }
 };
+
+
+// Specialization for filtered_kernel
+template<class R>
+struct
+Segment_Voronoi_diagram_traits_without_intersections_2<Filtered_kernel<R>,
+						       Field_tag>
+  : public
+  Segment_Voronoi_diagram_filtered_traits_without_intersections_2<R,Field_tag,
+					    typename Filtered_kernel<R>::EK,
+					    Field_tag,
+					    typename Filtered_kernel<R>::FK,
+					    Sqrt_field_tag>
+{};
 
 CGAL_END_NAMESPACE
 
